# newWTAS

./: Anchor.toml  Cargo.toml  README.md  REVIEW_RESPONSE.md
cli/: Cargo.toml
cli/src/: main.rs
ecc_scalar/: Cargo.toml
ecc_scalar/src/: main.rs
programs/aggtest/: Cargo.toml
programs/aggtest/src/: lib.rs
programs/aggtest_zk/: Cargo.toml
programs/aggtest_zk/src/: lib.rs
schemes/: Cargo.toml
schemes/src/: bls_baseline.rs  lib.rs  main.rs  pr_taps.rs  schnorr.rs  taps.rs  virtual_frost.rs  wtas.rs  wts.rs  wts_das.rs
tests/: aggtest.ts
time/: Cargo.toml
time/src/: main.rs
zk/: Cargo.toml
zk/src/: lib.rs  main.rs
