[package]
name = "schemes"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3"
rand = "0.8"
sha2 = "0.10"
secp256k1 = { version = "0.28.2", features = ["rand-std", "global-context"] }

# 只在启用 pr_taps 时编译，避免影响其它模块
ed25519-dalek = { version = "1.0", optional = true }

# Virtual/Weighted FROST dependencies
curve25519-dalek = "4"
merlin = "3"

[features]
default = ["schnorr", "virtual_frost"]
schnorr = []
pr_taps = ["ed25519-dalek"]       # 启用 pr_taps 时，顺带启用可选依赖
virtual_frost = []                 # Virtual/Weighted FROST for comparison
