[package]
name = "schemes"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3"
rand = "0.8"
sha2 = "0.10"
secp256k1 = { version = "0.28.2", features = ["rand-std", "global-context"] }

# WTAS (our scheme) + Virtual FROST comparison
curve25519-dalek = "4"

# Virtual FROST uses merlin for transcript hashing
merlin = "3"

# Ed25519 single-signer baseline (optional)
ed25519-dalek = { version = "1.0", optional = true }

[features]
default = ["wtas", "virtual_frost", "bls_baseline", "schnorr"]
wtas = []
virtual_frost = []
bls_baseline = []
schnorr = []
pr_taps = ["ed25519-dalek"]
