[package]
name = "schemes"
version = "0.1.0"
edition = "2021"

[lib]
name = "schemes"
path = "src/lib.rs"

[dependencies]
blst = "0.3"
rand = "0.8"
sha2 = "0.10"
secp256k1 = { version = "0.28.2", features = ["rand-std", "global-context"] }

# WTAS (our scheme) + Virtual FROST comparison
curve25519-dalek = "4"

# Virtual FROST uses merlin for transcript hashing
merlin = "3"

# Ed25519 single-signer baseline (optional)
ed25519-dalek = { version = "1.0", optional = true }

# NIZK proof system (our scheme)
zk = { path = "../zk" }

# rand_core for RngCore in ZK
rand_core = "0.6"

[features]
default = ["wtas", "virtual_frost", "wts_das", "taps"]
wtas = []
virtual_frost = []
wts_das = []
taps = []
bls_baseline = []
schnorr = []      # deprecated, kept for backward compat
pr_taps = ["ed25519-dalek"]  # deprecated, kept for backward compat
