[package]
name = "time"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
curve25519-dalek = "4"
secp256k1 = { version = "0.28.2", features = ["rand-std", "global-context"] }
blst = "0.3"
sha2 = "0.10"    # for SHA-256, SHA-512
sha3 = "0.10"    # for SHA3-256
blake2 = "0.10"  # for Blake2b-512
digest = "0.10"  # trait for unify Digest
