[package]
name = "zk"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk"
path = "src/lib.rs"

[[bin]]
name = "zk_demo"
path = "src/main.rs"

[dependencies]
curve25519-dalek = { version = "4.0", features = ["rand_core", "digest"] }
rand = "0.8"
rand_core = "0.6.4"
sha3 = "0.10"
merlin = "3.0"
thiserror = "1.0"
hex = "0.4.3"
